0032596: [REGRESSION] Data Exchange, STEP Reader - OCCT 7.6.0dev does not open file correctly

Fixed typo in the StepToTopoDS_TranslateFace.cxx after #29564 issue